cmake_minimum_required(VERSION 3.15)
project(FirstProject)

set(CMAKE_CXX_STANDARD 14)


#运行SortClass目录下的LinearSort.cpp
#add_executable(FirstProject SortClass/LinearSort.cpp)

#运行src目录下的main.cpp
#add_executable(FirstProject main.cpp)


add_executable(FirstProject HuangYuLianTeacher/H3/ChangeBinToLinKedList.cpp)